@@ -111,7 +111,7 @@ int dynsec_clients__config_load(cJSON *tree)
 	struct dynsec__client *client;
 	struct dynsec__role *role;
 	unsigned char *buf;
-	int buf_len;
+	size_t buf_len;
 	int priority;
 	int iterations;
 
@@ -167,13 +167,14 @@ int dynsec_clients__config_load(cJSON *tree)
 				}
 
 				if(dynsec_auth__base64_decode(j_salt->valuestring, &buf, &buf_len) != MOSQ_ERR_SUCCESS
-						|| buf_len != sizeof(client->pw.salt)){
+						|| buf_len > sizeof(client->pw.salt)){
 
 					mosquitto_free(client->username);
 					mosquitto_free(client);
 					continue;
 				}
 				memcpy(client->pw.salt, buf, (size_t)buf_len);
+				client->pw.salt_len = (size_t)buf_len;
 				mosquitto_free(buf);
 
 				if(dynsec_auth__base64_decode(j_password->valuestring, &buf, &buf_len) != MOSQ_ERR_SUCCESS
@@ -286,7 +287,7 @@ static int dynsec__config_add_clients(cJSON *j_clients)
 			if(jtmp == NULL) return 1;
 			cJSON_AddItemToObject(j_client, "password", jtmp);
 
-			if(dynsec_auth__base64_encode(client->pw.salt, sizeof(client->pw.salt), &buf) != MOSQ_ERR_SUCCESS){
+			if(dynsec_auth__base64_encode(client->pw.salt, client->pw.salt_len, &buf) != MOSQ_ERR_SUCCESS){
 				return 1;
 			}
 
